--- a/public/stylesheets/custom-theme/jquery-ui-1.7.custom.css
+++ b/public/stylesheets/custom-theme/jquery-ui-1.7.custom.css
@@ -48,18 +48,18 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Verdana,Arial,sans-serif; font-size: 1.1em; }
+.ui-widget { font-family: Arial,sans-serif; /*font-size: 1.1em; */}
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Verdana,Arial,sans-serif; font-size: 1em; }
-.ui-widget-content { border: 1px solid #e0cfc2; background: #ffffff url(images/ui-bg_inset-soft_100_ffffff_1x100.png) 50% bottom repeat-x; color: #1e1b1d; }
+.ui-widget-content { /*border: 1px solid #e0cfc2; background: #ffffff url(images/ui-bg_inset-soft_100_ffffff_1x100.png) 50% bottom repeat-x; color: #1e1b1d; */}
 .ui-widget-content a { color: #1e1b1d; }
-.ui-widget-header { border: 1px solid #d4babd; background: #d9c6c8 url(images/ui-bg_glass_60_d9c6c8_1x400.png) 50% 50% repeat-x; color: #BB0000; font-weight: bold; }
+.ui-widget-header { /*border: 1px solid #d4babd; background: #d9c6c8 url(images/ui-bg_glass_60_d9c6c8_1x400.png) 50% 50% repeat-x; color: #BB0000; font-weight: bold; */}
 .ui-widget-header a { color: #ffffff; }
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default, .ui-widget-content .ui-state-default { border: 1px solid #cdc3b7; background: #e3e3d4 url(images/ui-bg_glass_70_e3e3d4_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #5e564b; outline: none; }
+.ui-state-default, .ui-widget-content .ui-state-default {/* border: 1px solid #cdc3b7; background: #e3e3d4 url(images/ui-bg_glass_70_e3e3d4_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #5e564b; outline: none; */ background-color: rgba(255,255,255,.5);}
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #5e564b; text-decoration: none; outline: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus { border: 1px solid #f5ad66; background: #f5f0e5 url(images/ui-bg_glass_100_f5f0e5_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #990000; outline: none; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus { /*border: 1px solid #f5ad66; background: #f5f0e5 url(images/ui-bg_glass_100_f5f0e5_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #990000; outline: none; */ background-color: white}
 .ui-state-hover a, .ui-state-hover a:hover { color: #001100; text-decoration: none; outline: none; }
 .ui-state-active, .ui-widget-content .ui-state-active { border: 1px solid #e0cfc2; background: #ffffff url(images/ui-bg_glass_100_ffffff_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #000000; outline: none; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #000000; outline: none; text-decoration: none; }
@@ -272,7 +272,7 @@
 .ui-corner-tr { -moz-border-radius-topright: 6px; -webkit-border-top-right-radius: 6px; }
 .ui-corner-bl { -moz-border-radius-bottomleft: 6px; -webkit-border-bottom-left-radius: 6px; }
 .ui-corner-br { -moz-border-radius-bottomright: 6px; -webkit-border-bottom-right-radius: 6px; }
-.ui-corner-top { -moz-border-radius-topleft: 6px; -webkit-border-top-left-radius: 6px; -moz-border-radius-topright: 6px; -webkit-border-top-right-radius: 6px; }
+.ui-corner-top {/* -moz-border-radius-topleft: 6px; -webkit-border-top-left-radius: 6px; -moz-border-radius-topright: 6px; -webkit-border-top-right-radius: 6px; */}
 .ui-corner-bottom { -moz-border-radius-bottomleft: 6px; -webkit-border-bottom-left-radius: 6px; -moz-border-radius-bottomright: 6px; -webkit-border-bottom-right-radius: 6px; }
 .ui-corner-right {  -moz-border-radius-topright: 6px; -webkit-border-top-right-radius: 6px; -moz-border-radius-bottomright: 6px; -webkit-border-bottom-right-radius: 6px; }
 .ui-corner-left { -moz-border-radius-topleft: 6px; -webkit-border-top-left-radius: 6px; -moz-border-radius-bottomleft: 6px; -webkit-border-bottom-left-radius: 6px; }
@@ -395,11 +395,11 @@
 .ui-slider-vertical .ui-slider-range-min { bottom: 0; }
 .ui-slider-vertical .ui-slider-range-max { top: 0; }/* Tabs
 ----------------------------------*/
-.ui-tabs { padding: .2em; zoom: 1; }
-.ui-tabs .ui-tabs-nav { list-style: none; position: relative; padding: .2em .2em 0; }
-.ui-tabs .ui-tabs-nav li { position: relative; float: left; border-bottom-width: 0 !important; margin: 0 .2em -1px 0; padding: 0; }
+.ui-tabs {/* padding: .2em; zoom: 1; */}
+.ui-tabs .ui-tabs-nav { list-style: none; position: relative; padding: 0 .6em 0 0; }
+.ui-tabs .ui-tabs-nav li { position: relative; float: left; border-bottom-width: 0 !important; margin: 0 .3em 0 0; padding: 0; width: 10em}
 .ui-tabs .ui-tabs-nav li a { float: left; text-decoration: none; padding: .5em 1em; }
-.ui-tabs .ui-tabs-nav li.ui-tabs-selected { padding-bottom: 1px; border-bottom-width: 0; }
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected { /*padding-bottom: 1px; border-bottom-width: 0;*/ }
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text; }
 .ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
 .ui-tabs .ui-tabs-panel { padding: 1em 1.4em; display: block; border-width: 0; background: none; }
