--- a/app/views/layouts/mapdetail.html.erb
+++ b/app/views/layouts/mapdetail.html.erb
@@ -122,12 +122,14 @@
     <body>
     <%end%>
     <%= render :partial => 'shared/analyticstop' %>
+    <%= begin %>
     <div id="headerDiv" class="headerDiv">
       <h1><%= link_to "Map Warper", root_path %></h1>
       <%= render :partial => 'shared/header' %>
       <%= render :partial => 'shared/nav' %>
     </div>
     <%= breadcrumbs %>
+    <%= end %>
     <table id="map_table">
       <%= render :partial => 'maps/map_detail', :object => @map, :locals => {:variety => "detail"} %>
     </table>
