--- a/public/stylesheets/custom-theme/jquery-ui-1.7.custom.css
+++ b/public/stylesheets/custom-theme/jquery-ui-1.7.custom.css
@@ -397,12 +397,12 @@
 ----------------------------------*/
 .ui-tabs {/* padding: .2em; zoom: 1; */}
 .ui-tabs .ui-tabs-nav { list-style: none; position: relative; padding: 0 .6em 0 0; }
-.ui-tabs .ui-tabs-nav li { position: relative; float: left; border-bottom-width: 0 !important; margin: 0 .3em 0 0; padding: 0; width: 10em}
+.ui-tabs .ui-tabs-nav li { position: relative; float: left; border-bottom-width: 0 !important; margin: 0 .3em 0 0; padding: .5em; width: 8em; text-align: center}
 .ui-tabs .ui-tabs-nav li a { float: left; text-decoration: none; padding: .5em 1em; }
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected { /*padding-bottom: 1px; border-bottom-width: 0;*/ }
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text; }
 .ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
-.ui-tabs .ui-tabs-panel { padding: 1em 1.4em; display: block; border-width: 0; background: none; }
+.ui-tabs .ui-tabs-panel {/* padding: 1em 1.4em; */ display: block; border-width: 0; background: none; }
 /*.ui-tabs .ui-tabs-hide { display: none !important; } */
 .ui-tabs .ui-tabs-hide {position: absolute ; top: -10000px; left: -10000px; }
 
