--- a/public/stylesheets/styles_1.css
+++ b/public/stylesheets/styles_1.css
@@ -273,12 +273,12 @@ ul.list {
 body
 {
 /*  background: #fff; */
-	background-color: rgb(223, 223, 223);
+	background-color: rgb(196, 196, 196);
 /*	font-family: Verdana, Helvetica, Arial, sans-serif; */
 	font-family: Helvetica, Arial, sans-serif;
 /*	font-size:95%;*/
 	color: #5e564b;
-	margin: 0 0 0 0;
+	margin: 20px;
 }
 
 #headerDiv-layer h1 {
@@ -309,7 +309,7 @@ a:visited {
 }
 
 a:hover {
-	color: #00CC00;
+	color: rgb(22, 132, 233);
 }
 
 h1 {
@@ -346,7 +346,7 @@ p {
 .layer-properties * td.property { width:25%;  font-style: italic; }
 
 .addPointHighlighted{
-  border: 2px solid #00F2AB;
+  border: 3px solid #FFF;
   display:inline;
   padding:5px 3px 8px;
 }
